<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/username" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:hint="@string/email" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/i_agree_to_the_terms_and_conditions" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatImageButton
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_button_background"
            android:src="@drawable/ic_arrow_forward_black_24dp" />

    </LinearLayout>

</ScrollView>