<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/type_a_new_password_to_reset" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/MyEditText"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatEditText
        style="@style/MyEditText"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />


    <android.support.v7.widget.AppCompatImageButton
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/circle_button_background"
        android:src="@drawable/ic_arrow_forward_black_24dp" />

</LinearLayout>