<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:focusableInTouchMode="true"
        android:focusable="false"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/MyEditText"
                        android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <android.support.v7.widget.AppCompatEditText
                        style="@style/MyEditText"
                        android:layout_marginTop="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="@string/forgot_password"
                            android:textColor="@color/black" />

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/checkbox_remember"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/remember_me" />

                    </RelativeLayout>

                    <android.support.v7.widget.AppCompatButton
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/create_account"
                        style="@style/Base.Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border_button_color"
                        android:text="@string/create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
    <TextView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:alpha=".8"
        android:background="@drawable/login_top_overlay"/>
</FrameLayout>